# HairSim

./: CMakeLists.txt  README.md  _README.MD
include/GL/: glext.h
src/hair/: data.hpp  hair.cpp  hair.output  main.hpp  modelloader.hpp  scalp.output  scalp_fix.output  shaderloader.hpp  textureloader.hpp  untitled
